--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --dark-green: #064e3b;
-  --faint-green: #a7f3d0;
+  --dark-green: #804b95;
+  --faint-green: #390757;
 }
 * {
   font-family: "Open Sans", sans-serif;
